Feed is now largely referenced by name and not entity.